kubernetes/manifests/apps/sftpgo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: sftpgo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: sftpgo
    app.kubernetes.io/version: 2.6.6-alpine
    helm.sh/chart: sftpgo-0.40.0
  name: sftpgo
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: sftpgo
      app.kubernetes.io/name: sftpgo
  template:
    metadata:
      annotations:
        checksum/config: 8d002516fe55a42a3f6c6c11f305a1fc59e3bc933d1da07f8b4bff6ba17f6983
      labels:
        app.kubernetes.io/instance: sftpgo
        app.kubernetes.io/name: sftpgo
    spec:
      containers:
        - args:
            - sftpgo
            - serve
          image: ghcr.io/drakkan/sftpgo:v2.6.6-alpine
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: telemetry
          name: sftpgo
          ports:
            - containerPort: 2022
              name: sftp
              protocol: TCP
            - containerPort: 2021
              name: ftp
              protocol: TCP
            - containerPort: 8081
              name: webdav
              protocol: TCP
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 10000
              name: telemetry
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: telemetry
          resources: {}
          securityContext: {}
          volumeMounts:
            - mountPath: /etc/sftpgo/sftpgo.json
              name: config
              readOnly: true
              subPath: sftpgo.json
            - mountPath: /var/lib/sftpgo
              name: sftpgo-volume
            - mountPath: /mnt/shared_storage
              name: shared-storage
              readOnly: false
      hostNetwork: false
      securityContext:
        fsGroup: 1000
      serviceAccountName: sftpgo
      volumes:
        - configMap:
            name: sftpgo
          name: config
        - name: sftpgo-volume
          persistentVolumeClaim:
            claimName: sftpgo
        - name: shared-storage
          persistentVolumeClaim:
            claimName: cephfs-shared-storage-root
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.115
    lbipam.cilium.io/sharing-key: sftpgo
  labels:
    app.kubernetes.io/instance: sftpgo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: sftpgo
    app.kubernetes.io/version: 2.6.6-alpine
    helm.sh/chart: sftpgo-0.40.0
  name: sftpgo
  namespace: apps
spec:
  externalTrafficPolicy: Cluster
  ports:
    - appProtocol: sftp-ssh
      name: sftp
      port: 22
      protocol: TCP
      targetPort: sftp
    - appProtocol: ftp
      name: ftp
      port: 21
      protocol: TCP
      targetPort: ftp
    - appProtocol: ftp
      name: ftp-passive-50000
      port: 50000
      protocol: TCP
      targetPort: 50000
    - appProtocol: ftp
      name: ftp-passive-50001
      port: 50001
      protocol: TCP
      targetPort: 50001
    - appProtocol: ftp
      name: ftp-passive-50002
      port: 50002
      protocol: TCP
      targetPort: 50002
    - appProtocol: ftp
      name: ftp-passive-50003
      port: 50003
      protocol: TCP
      targetPort: 50003
    - appProtocol: ftp
      name: ftp-passive-50004
      port: 50004
      protocol: TCP
      targetPort: 50004
    - appProtocol: ftp
      name: ftp-passive-50005
      port: 50005
      protocol: TCP
      targetPort: 50005
    - appProtocol: ftp
      name: ftp-passive-50006
      port: 50006
      protocol: TCP
      targetPort: 50006
    - appProtocol: ftp
      name: ftp-passive-50007
      port: 50007
      protocol: TCP
      targetPort: 50007
    - appProtocol: ftp
      name: ftp-passive-50008
      port: 50008
      protocol: TCP
      targetPort: 50008
    - appProtocol: ftp
      name: ftp-passive-50009
      port: 50009
      protocol: TCP
      targetPort: 50009
    - appProtocol: webdav
      name: webdav
      port: 81
      protocol: TCP
      targetPort: webdav
    - appProtocol: http
      name: http
      port: 80
      protocol: TCP
      targetPort: http
    - appProtocol: http
      name: telemetry
      port: 10000
      protocol: TCP
      targetPort: telemetry
  selector:
    app.kubernetes.io/instance: sftpgo
    app.kubernetes.io/name: sftpgo
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: sftpgo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: sftpgo
    app.kubernetes.io/version: 2.6.6-alpine
    helm.sh/chart: sftpgo-0.40.0
  name: sftpgo-api
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: sftpgoapi.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: sftpgo
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sftpgoapi.josevictor.me
      secretName: wildcard-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: sftpgo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: sftpgo
    app.kubernetes.io/version: 2.6.6-alpine
    helm.sh/chart: sftpgo-0.40.0
  name: sftpgo-ui
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: sftpgo.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: sftpgo
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sftpgo.josevictor.me
      secretName: wildcard-tls
